--- a/HilbertGenomeCooler.ipynb
+++ b/HilbertGenomeCooler.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 138,
    "id": "8dc59145-2bcd-4a57-a64a-b45cf42b4777",
    "metadata": {},
    "outputs": [
@@ -42,18 +42,18 @@
      "text": [
       "Requirement already satisfied: numpy-hilbert-curve in /Users/areynolds/miniconda3/lib/python3.8/site-packages (1.0.1)\n",
       "Requirement already satisfied: cooler in /Users/areynolds/miniconda3/lib/python3.8/site-packages (0.8.11)\n",
-      "Requirement already satisfied: asciitree in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.3)\n",
+      "Requirement already satisfied: pypairix in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.7)\n",
+      "Requirement already satisfied: numpy>=1.9 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.22.4)\n",
+      "Requirement already satisfied: h5py>=2.5 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (3.3.0)\n",
+      "Requirement already satisfied: multiprocess in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.70.14)\n",
       "Requirement already satisfied: simplejson in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (3.18.0)\n",
       "Requirement already satisfied: six in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.16.0)\n",
-      "Requirement already satisfied: multiprocess in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.70.14)\n",
-      "Requirement already satisfied: pypairix in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.7)\n",
-      "Requirement already satisfied: pyfaidx in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.7.1)\n",
-      "Requirement already satisfied: pandas in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.4.3)\n",
-      "Requirement already satisfied: h5py>=2.5 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (3.3.0)\n",
-      "Requirement already satisfied: pyyaml in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (6.0)\n",
-      "Requirement already satisfied: scipy>=0.16 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.6.2)\n",
+      "Requirement already satisfied: asciitree in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.3)\n",
       "Requirement already satisfied: cytoolz<0.11 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.10.1)\n",
-      "Requirement already satisfied: numpy>=1.9 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.22.4)\n",
+      "Requirement already satisfied: pandas in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.4.3)\n",
+      "Requirement already satisfied: scipy>=0.16 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.6.2)\n",
+      "Requirement already satisfied: pyfaidx in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.7.1)\n",
+      "Requirement already satisfied: pyyaml in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (6.0)\n",
       "Requirement already satisfied: click>=7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (8.1.3)\n",
       "Requirement already satisfied: toolz>=0.8.0 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cytoolz<0.11->cooler) (0.12.0)\n",
       "Requirement already satisfied: dill>=0.3.6 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from multiprocess->cooler) (0.3.6)\n",
@@ -61,11 +61,11 @@
       "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from pandas->cooler) (2.8.2)\n",
       "Requirement already satisfied: setuptools>=0.7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from pyfaidx->cooler) (63.1.0)\n",
       "Requirement already satisfied: matplotlib in /Users/areynolds/miniconda3/lib/python3.8/site-packages (3.4.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (1.3.1)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: numpy>=1.16 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (1.22.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (8.2.0)\n",
       "Requirement already satisfied: six in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cycler>=0.10->matplotlib) (1.16.0)\n",
       "Requirement already satisfied: h5py in /Users/areynolds/miniconda3/lib/python3.8/site-packages (3.3.0)\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 139,
    "id": "5abe5100-1ed1-4eb7-aed4-76928147844f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 140,
    "id": "fd7801f4-bc90-4794-a382-3f0d3bb1f795",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 141,
    "id": "14dc74a5-195e-4787-ae5d-2e5b853e616a",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 142,
    "id": "77de3538-15b2-41f0-b03b-683a48e71410",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 143,
    "id": "d512441f-5ada-4988-aaad-92dfa0840735",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 144,
    "id": "c56e1293-3580-4e57-b0bc-12a72ac370e0",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "9216"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 145,
    "id": "34c0c74e-4042-4b91-a533-9cf9ecd1753a",
    "metadata": {},
    "outputs": [],
@@ -207,25 +207,25 @@
     "\n",
     "Eventually, chromatin states (or other categorical data) will be derived from applying Observable notebook code that aggregates signal over the whole genome.\n",
     "\n",
-    "The bin size at each curve order is the resolution divided by the order. This determines the ultimate size of a Hilbert curve cell at each coordinate pair. \n",
+    "The bin size at each curve order is the `bin_resolution` divided by the order. This determines the ultimate size of a Hilbert curve cell at each coordinate pair. At the lowest orders, the bin size is the largest, and vice versa.\n",
     "\n",
     "Coordinate pairs — BG2 pairs — need to based upon Hilbert curve ordering. We use the `hilbert` package to map locations into an index-able order, so that random access to regions of the pseudo-chromosome can be recovered via HiGlass queries later on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 146,
    "id": "2b9ccd18-7e8c-4bfb-9914-bb1f98c13d5e",
    "metadata": {},
    "outputs": [],
    "source": [
     "signal_min = 0\n",
-    "signal_max = 2**20 - 1"
+    "signal_max = 4**curve_order['max'] - 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 147,
    "id": "82b08290-679d-4a12-8b6f-0c44aec28bee",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 148,
    "id": "adcf8c58-5537-4151-9397-0c07b74bc53e",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 149,
    "id": "0d48cea9-3eb0-4914-8553-a66db1014c48",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 150,
    "id": "32ba15c2-3558-4afa-9c25-d5d09431aff9",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "'hilbert_genome_cooler_data/bg2.signal.8.cool'"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 151,
    "id": "45aa85ac-cef1-459e-81fa-d5dea05ed651",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
       "text/plain": [
        "{'bin-size': 36,\n",
        " 'bin-type': 'fixed',\n",
-       " 'creation-date': '2022-12-07T11:13:16.029611',\n",
+       " 'creation-date': '2022-12-07T11:28:59.076231',\n",
        " 'format': 'HDF5::Cooler',\n",
        " 'format-url': 'https://github.com/open2c/cooler',\n",
        " 'format-version': 3,\n",
@@ -352,7 +352,7 @@
        " 'sum': 34359214080}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,17 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 152,
    "id": "df0b3231-3477-4b59-a9ef-80ab94218d83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fd578a59820>"
+       "<matplotlib.colorbar.Colorbar at 0x7fd5a9329940>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -404,7 +404,6 @@
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax = fig.add_subplot(111)\n",
     "im = ax.matshow(test_cool_arr, cmap='viridis', interpolation='nearest', vmin=signal_min, vmax=signal_max)\n",
-    "#test_cool_arr  \n",
     "fig.colorbar(im)"
    ]
   },
@@ -418,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 153,
    "id": "a37aaf28-7d09-4fe6-aed8-dd291c659c5b",
    "metadata": {},
    "outputs": [],
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 154,
    "id": "46adc652-305c-4565-98b4-bd9af24edc33",
    "metadata": {},
    "outputs": [],
@@ -496,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 155,
    "id": "e6069564-2705-4128-82f8-e86089444a1e",
    "metadata": {},
    "outputs": [],
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 156,
    "id": "13b287bc-185c-42ec-b686-9731efaec4ba",
    "metadata": {},
    "outputs": [],
@@ -546,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 157,
    "id": "2c425c75-2c71-42fe-98ce-11d51674b647",
    "metadata": {},
    "outputs": [
@@ -574,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 158,
    "id": "2ba4a744-1519-41a2-8290-68a33a2cfb09",
    "metadata": {
     "tags": []
