Processing real data into category-promoted arrays

--- a/HilbertGenomeCooler.ipynb
+++ b/HilbertGenomeCooler.ipynb
@@ -56,30 +56,30 @@
       "Requirement already satisfied: h5py in /Users/areynolds/miniconda3/lib/python3.8/site-packages (3.3.0)\n",
       "Requirement already satisfied: numpy>=1.17.5 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from h5py) (1.22.4)\n",
       "Requirement already satisfied: cooler in /Users/areynolds/miniconda3/lib/python3.8/site-packages (0.8.11)\n",
-      "Requirement already satisfied: click>=7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (8.1.3)\n",
-      "Requirement already satisfied: pyyaml in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (6.0)\n",
-      "Requirement already satisfied: scipy>=0.16 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.6.2)\n",
-      "Requirement already satisfied: h5py>=2.5 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (3.3.0)\n",
-      "Requirement already satisfied: cytoolz<0.11 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.10.1)\n",
-      "Requirement already satisfied: multiprocess in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.70.14)\n",
-      "Requirement already satisfied: six in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.16.0)\n",
-      "Requirement already satisfied: pyfaidx in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.7.1)\n",
-      "Requirement already satisfied: numpy>=1.9 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.22.4)\n",
       "Requirement already satisfied: simplejson in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (3.18.0)\n",
+      "Requirement already satisfied: h5py>=2.5 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (3.3.0)\n",
+      "Requirement already satisfied: numpy>=1.9 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.22.4)\n",
+      "Requirement already satisfied: six in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.16.0)\n",
+      "Requirement already satisfied: asciitree in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.3)\n",
+      "Requirement already satisfied: multiprocess in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.70.14)\n",
+      "Requirement already satisfied: pyfaidx in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.7.1)\n",
+      "Requirement already satisfied: cytoolz<0.11 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.10.1)\n",
+      "Requirement already satisfied: pyyaml in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (6.0)\n",
       "Requirement already satisfied: pandas in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.4.3)\n",
       "Requirement already satisfied: pypairix in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.7)\n",
-      "Requirement already satisfied: asciitree in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (0.3.3)\n",
+      "Requirement already satisfied: click>=7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (8.1.3)\n",
+      "Requirement already satisfied: scipy>=0.16 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cooler) (1.6.2)\n",
       "Requirement already satisfied: toolz>=0.8.0 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cytoolz<0.11->cooler) (0.12.0)\n",
       "Requirement already satisfied: dill>=0.3.6 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from multiprocess->cooler) (0.3.6)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from pandas->cooler) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/areynolds/.local/lib/python3.8/site-packages (from pandas->cooler) (2021.1)\n",
       "Requirement already satisfied: setuptools>=0.7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from pyfaidx->cooler) (63.1.0)\n",
       "Requirement already satisfied: matplotlib in /Users/areynolds/miniconda3/lib/python3.8/site-packages (3.4.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: numpy>=1.16 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (1.22.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (1.3.1)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from matplotlib) (8.2.0)\n",
       "Requirement already satisfied: six in /Users/areynolds/miniconda3/lib/python3.8/site-packages (from cycler>=0.10->matplotlib) (1.16.0)\n",
       "Requirement already satisfied: numpy-hilbert-curve in /Users/areynolds/miniconda3/lib/python3.8/site-packages (1.0.1)\n"
@@ -155,37 +155,228 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Note: Custom curve order maximum (8) is less than optimum calculated maximum (12)\n",
-      "Note: Calculating background frequencies of categories from input signal file\n"
+      "Note: Custom curve order maximum (8) is less than optimum calculated maximum (12)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{8: 3200}, {7: 6400}, {6: 12800}, {5: 25600}]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Note: Generating categorical data from input signal file\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "{8: 3200, 7: 6400, 6: 12800, 5: 25600, 4: 51200}\n",
+      "{0.02420393280989194: 0, 0.002708360245469004: 1, 0.00394814926011068: 2, 0.001220604360849253: 3, 0.026705936533921948: 4, 0.11972853944638585: 5, 0.0008191515126548877: 6, 0.0005271316964658933: 7, 0.01561427821918218: 8, 0.010779735208250608: 9, 0.0238785053698427: 10, 0.013359458511884503: 11, 0.07574853917899496: 12, 0.002951533907732596: 13, 0.0009647647358091171: 14, 0.015355406009786235: 15, 0.09095262598409129: 16, 0.5705334328871138: 17}\n",
       "[0.024203924449809053, 0.002708355043696703, 0.003948147350381652, 0.0012206042756747646, 0.026705927402440006, 0.11972853264733646, 0.0008191415662563034, 0.0005271217003774098, 0.015614276386078431, 0.010779732451657307, 0.023878503196616135, 0.013359456620804257, 0.0757485318733546, 0.002951532648822401, 0.0009647638622056454, 0.015355399482853492, 0.09095262371773721, 0.5705334253238982]\n",
-      "[17, 17, 17, 17, 17, 12, 12, 12, 12, 12]\n"
+      "[17, 17, 17, 17, 17, 12, 12, 12, 12, 12]\n",
+      "ds_as_fs (all) [0.01535541 0.01535541 0.01535541 0.01535541 0.01535541 0.01535541\n",
+      " 0.01535541 0.01535541 0.01535541 0.01535541 0.01535541 0.01535541\n",
+      " 0.01535541 0.01535541 0.01535541 0.01535541]\n",
+      "ds_as_fs (min) 0.015355406009786235\n",
+      "15\n",
+      "data_split_to_promoted_category 15\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Note: Processing signal for curve order 8...\n",
+      "Note: Processing signal for curve order 8...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chr1 [[15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15]]\n",
+      "chr1 [15]\n",
+      "ds_as_fs (all) [0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854]\n",
+      "ds_as_fs (min) 0.11972853944638585\n",
+      "5\n",
+      "data_split_to_promoted_category 5\n",
+      "chr2 [[5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]]\n",
+      "chr2 [5]\n",
+      "ds_as_fs (all) [0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854]\n",
+      "ds_as_fs (min) 0.11972853944638585\n",
+      "5\n",
+      "data_split_to_promoted_category 5\n",
+      "chr3 [[5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]]\n",
+      "chr3 [5]\n",
+      "ds_as_fs (all) [0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.02670594 0.02670594 0.02670594 0.02670594 0.02670594\n",
+      " 0.00081915 0.11972854 0.11972854 0.11972854]\n",
+      "ds_as_fs (min) 0.0008191515126548877\n",
+      "6\n",
+      "data_split_to_promoted_category 6\n",
+      "chr4 [[5, 5, 5, 5, 5, 5, 5, 4, 4, 4, 4, 4, 6, 5, 5, 5]]\n",
+      "chr4 [6]\n",
+      "ds_as_fs (all) [0.01535541 0.01535541 0.01535541 0.01535541 0.01535541 0.01535541\n",
+      " 0.01535541 0.09095263 0.09095263 0.09095263 0.09095263 0.09095263\n",
+      " 0.09095263 0.09095263 0.09095263 0.07574854]\n",
+      "ds_as_fs (min) 0.015355406009786235\n",
+      "15\n",
+      "data_split_to_promoted_category 15\n",
+      "chr5 [[15, 15, 15, 15, 15, 15, 15, 16, 16, 16, 16, 16, 16, 16, 16, 12]]\n",
+      "chr5 [15]\n",
+      "ds_as_fs (all) [0.07574854 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.07574854 0.07574854]\n",
+      "ds_as_fs (min) 0.07574853917899496\n",
+      "12\n",
+      "data_split_to_promoted_category 12\n",
+      "chr6 [[12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12]]\n",
+      "chr6 [12]\n",
+      "ds_as_fs (all) [0.09095263 0.09095263 0.09095263 0.09095263 0.09095263 0.09095263\n",
+      " 0.09095263 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.07574854 0.07574854]\n",
+      "ds_as_fs (min) 0.07574853917899496\n",
+      "12\n",
+      "data_split_to_promoted_category 12\n",
+      "chr7 [[16, 16, 16, 16, 16, 16, 16, 12, 12, 12, 12, 12, 12, 12, 12, 12]]\n",
+      "chr7 [12]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chrX [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chrX [17]\n",
+      "ds_as_fs (all) [0.07574854 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.07574854 0.07574854]\n",
+      "ds_as_fs (min) 0.07574853917899496\n",
+      "12\n",
+      "data_split_to_promoted_category 12\n",
+      "chr8 [[12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12]]\n",
+      "chr8 [12]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chr9 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chr9 [17]\n",
+      "ds_as_fs (all) [0.09095263 0.09095263 0.09095263 0.09095263 0.09095263 0.09095263\n",
+      " 0.09095263 0.09095263 0.09095263 0.09095263 0.09095263 0.09095263\n",
+      " 0.09095263 0.09095263 0.09095263 0.09095263]\n",
+      "ds_as_fs (min) 0.09095262598409129\n",
+      "16\n",
+      "data_split_to_promoted_category 16\n",
+      "chr11 [[16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16]]\n",
+      "chr11 [16]\n",
+      "ds_as_fs (all) [0.02670594 0.02670594 0.02670594 0.02670594 0.02670594 0.02670594\n",
+      " 0.02670594 0.02670594 0.02670594 0.02670594 0.02670594 0.02670594\n",
+      " 0.02670594 0.02670594 0.02670594 0.11972854]\n",
+      "ds_as_fs (min) 0.026705936533921948\n",
+      "4\n",
+      "data_split_to_promoted_category 4\n",
+      "chr10 [[4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5]]\n",
+      "chr10 [4]\n",
+      "ds_as_fs (all) [0.11972854 0.11972854 0.11972854 0.02387851 0.02387851 0.02387851\n",
+      " 0.02387851 0.02387851 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854]\n",
+      "ds_as_fs (min) 0.0238785053698427\n",
+      "10\n",
+      "data_split_to_promoted_category 10\n",
+      "chr12 [[5, 5, 5, 10, 10, 10, 10, 10, 5, 5, 5, 5, 5, 5, 5, 5]]\n",
+      "chr12 [10]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chr13 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chr13 [17]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chr14 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chr14 [17]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chr15 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chr15 [17]\n",
+      "ds_as_fs (all) [0.00394815 0.02420393 0.02420393 0.02420393 0.00394815 0.00394815\n",
+      " 0.00270836 0.00270836 0.00270836 0.00270836 0.00394815 0.00394815\n",
+      " 0.00394815 0.00394815 0.02420393 0.01077974]\n",
+      "ds_as_fs (min) 0.002708360245469004\n",
+      "1\n",
+      "data_split_to_promoted_category 1\n",
+      "chr16 [[2, 0, 0, 0, 2, 2, 1, 1, 1, 1, 2, 2, 2, 2, 0, 9]]\n",
+      "chr16 [1]\n",
+      "ds_as_fs (all) [0.07574854 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854 0.07574854\n",
+      " 0.07574854 0.07574854 0.09095263 0.09095263]\n",
+      "ds_as_fs (min) 0.07574853917899496\n",
+      "12\n",
+      "data_split_to_promoted_category 12\n",
+      "chr17 [[12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 16, 16]]\n",
+      "chr17 [12]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.07574854 0.07574854 0.07574854\n",
+      " 0.01335946 0.01335946 0.01335946 0.01335946]\n",
+      "ds_as_fs (min) 0.013359458511884503\n",
+      "11\n",
+      "data_split_to_promoted_category 11\n",
+      "chr18 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 12, 12, 12, 11, 11, 11, 11]]\n",
+      "chr18 [11]\n",
+      "ds_as_fs (all) [0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854 0.02670594 0.02670594\n",
+      " 0.02670594 0.02670594 0.02670594 0.02670594]\n",
+      "ds_as_fs (min) 0.026705936533921948\n",
+      "4\n",
+      "data_split_to_promoted_category 4\n",
+      "chr20 [[5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 4, 4, 4, 4, 4, 4]]\n",
+      "chr20 [4]\n",
+      "ds_as_fs (all) [0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854 0.11972854\n",
+      " 0.11972854 0.11972854 0.11972854 0.11972854]\n",
+      "ds_as_fs (min) 0.11972853944638585\n",
+      "5\n",
+      "data_split_to_promoted_category 5\n",
+      "chr19 [[5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]]\n",
+      "chr19 [5]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chrY [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chrY [17]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chr22 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chr22 [17]\n",
+      "ds_as_fs (all) [0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343 0.57053343\n",
+      " 0.57053343 0.57053343 0.57053343 0.57053343]\n",
+      "ds_as_fs (min) 0.5705334328871138\n",
+      "17\n",
+      "data_split_to_promoted_category 17\n",
+      "chr21 [[17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]\n",
+      "chr21 [17]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Note: Processing signal for curve order 7...\n",
       "Note: Processing signal for curve order 6...\n",
       "Note: Processing signal for curve order 5...\n",
